--- a/BloggerWay.MVC/Areas/Admin/Views/User/PasswordChange.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/PasswordChange.cshtml
@@ -6,8 +6,8 @@
 <div class="row">
     <div class="col-lg-6 offset-lg-3">
         <div class="card mt-3">
-            <div class="card-header">
-                <h4 class="text-center"><span class="fas fa-key"></span> Şifre Değiştir</h4>
+            <div  style="background-color:#182539"class="card-header">
+                <h4  style="color:white"class="text-center"><span class="fas fa-key"></span> Şifre Değiştir</h4>
             </div>
             <div class="card-body">
                 <form asp-controller="User" asp-action="PasswordChange" method="post">
