--- a/BloggerWay.MVC/Areas/Admin/Views/Comment/_CommentUpdatePartial.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Comment/_CommentUpdatePartial.cshtml
@@ -2,9 +2,9 @@
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"><span class="fas fa-edit"></span> @Model.Id Numaralı Yorum Düzenleniyor...</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="İptal">
+            <div style="background-color:#182539" class="modal-header">
+                <h5 style="color:white" class="modal-title"><span class="fas fa-edit"></span> @Model.Id Numaralı Yorum Düzenleniyor...</h5>
+                <button style="color:white" type="button" class="close" data-dismiss="modal" aria-label="İptal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger btn-block" data-dismiss="modal"><span class="fas fa-times"></span> İptal</button>
-                <button type="button" class="btn btn-primary btn-block" id="btnUpdate"><span class="fas fa-save"></span> Kaydet</button>
+                <button style="background-color:#c47941" type="button" class="btn btn-primary btn-block" id="btnUpdate"><span class="fas fa-save"></span> Kaydet</button>
             </div>
         </div>
     </div>
