--- a/BloggerWay.MVC/Areas/Admin/Views/Article/Add.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Article/Add.cshtml
@@ -3,15 +3,15 @@
     Layout = "_Layout";
     ViewBag.Title = "Makale Ekle";
 }
-<ol class="breadcrumb mb-3 mt-2">
+<ol style="background-color:#182539" class="breadcrumb mb-3 mt-2">
     <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="Index">Makaleler</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="Add">Ekle</a></li>
 </ol>
-<form asp-controller="Article" asp-action="Add" method="post" enctype="multipart/form-data">
-    <div class="row mt-2">
-        <div class="col-md-8">
-            <div class="card">
+<form   asp-controller="Article" asp-action="Add" method="post" enctype="multipart/form-data">
+    <div  class="row mt-2">
+        <div  class="col-md-8">
+            <div  class="card">
                 <div class="card-body">
                     <div class="form-group">
                         <input type="text" id="articleTitle" class="form-control" placeholder="Makale Başlığı" asp-for="Title" />
@@ -26,8 +26,8 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <div class="card-header">
-                    Temel Konfigürasyonlar
+                <div style="background-color:#182539" class="card-header">
+                    <a style="color:white">Temel Konfigürasyonlar </a>
                 </div>
                 <div class="card-body">
                     <div class="form-group">
@@ -53,15 +53,15 @@
                         <span asp-validation-for="IsActive" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block mt-4">Kaydet</button>
+                        <button style="background-color:#c47941" type="submit" class="btn btn-primary btn-block mt-4">Kaydet</button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-12 mt-2">
             <div class="card">
-                <div class="card-header">
-                    SEO Optimizasyonu
+                <div  style="background-color:#182539"  class="card-header">
+                    <a style="color:white">SEO Optimizasyonu</a>
                 </div>
                 <div class="card-body">
                     <div class="form-row">
