--- a/BloggerWay.MVC/Areas/Admin/Views/Article/DeletedArticles.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Article/DeletedArticles.cshtml
@@ -3,14 +3,14 @@
     Layout = "_Layout";
     ViewBag.Title = "Silinmiş Makaleler";
 }
-<ol class="breadcrumb mb-3 mt-2">
+<ol style="background-color:#182539" class="breadcrumb mb-3 mt-2">
     <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="DeletedArticles">Silinmiş Makaleler</a></li>
 </ol>
 <div class="card mb-4">
-    <div class="card-header">
-        <i class="fas fa-table mr-1"></i>
-        Silinmiş Makaleler
+    <div  style="background-color:#182539"class="card-header">
+        <i style="color:white" class="fas fa-table mr-1"></i>
+        <a style="color:white">Silinmiş Makaleler</a> 
     </div>
     <div class="card-body">
         <div class="table-responsive">
