--- a/BloggerWay.MVC/Areas/Admin/Views/Article/Index.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Article/Index.cshtml
@@ -3,14 +3,14 @@
     Layout = "_Layout";
     ViewBag.Title = "Makaleler";
 }
-<ol class="breadcrumb mb-3 mt-2">
+<ol style="background-color:#182539" class="breadcrumb mb-3 mt-2">
     <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="Index">Makaleler</a></li>
 </ol>
 <div class="card mb-4">
-    <div class="card-header">
-        <i class="fas fa-table mr-1"></i>
-        Makaleler
+    <div style="background-color:#182539" class="card-header">
+        <i style="color:white" class="fas fa-table mr-1"></i>
+        <a style="color:white">Makaleler</a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -69,7 +69,7 @@
                         <td>@article.ModifiedDate.ToShortDateString()</td>
                         <td>@article.ModifiedByName</td>
                         <td>
-                            <a class="btn btn-primary btn-sm btn-update" data-id="@article.Id" asp-area="Admin" asp-controller="Article" asp-action="Update" asp-route-articleId="@article.Id"><span class="fas fa-edit"></span></a>
+                            <a  class="btn btn-primary btn-sm btn-update" data-id="@article.Id" asp-area="Admin" asp-controller="Article" asp-action="Update" asp-route-articleId="@article.Id"><span class="fas fa-edit"></span></a>
                             <button class="btn btn-danger btn-sm btn-delete" data-id="@article.Id"><span class="fas fa-minus-circle"></span></button>
                         </td>
                     </tr>
