--- a/BloggerWay.MVC/Areas/Admin/Views/Article/Update.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Article/Update.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
     ViewBag.Title = "Makale Düzenle";
 }
-<ol class="breadcrumb mb-3 mt-2">
+<ol style="background-color:#182539" class="breadcrumb mb-3 mt-2">
     <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="Index">Makaleler</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Article" asp-action="Update" asp-route-articleId="@Model.Id">Düzenle</a></li>
@@ -29,8 +29,8 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <div class="card-header">
-                    Temel Konfigürasyonlar
+                <div style="background-color:#182539" class="card-header">
+                    <a style="color:white">Temel Konfigürasyonlar</a>
                 </div>
                 <div class="card-body">
                     <div class="form-group">
@@ -62,15 +62,15 @@
                         <span asp-validation-for="IsActive" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block">Kaydet</button>
+                        <button style="background-color:#c47941" type="submit" class="btn btn-primary btn-block">Kaydet</button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-12 mt-2">
             <div class="card">
-                <div class="card-header">
-                    SEO Optimizasyonu
+                <div style="background-color:#182539" class="card-header">
+                    <a style="color:white"> SEO Optimizasyonu</a>
                 </div>
                 <div class="card-body">
                     <div class="form-row">
