--- a/BloggerWay.MVC/Areas/Admin/Views/Category/DeletedCategories.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Category/DeletedCategories.cshtml
@@ -3,15 +3,15 @@
     Layout = "_Layout";
     ViewBag.Title = "Silinmiş Kategoriler";
 }
-<ol class="breadcrumb mb-3 mt-2">
+<ol style="background-color:#182539" class="breadcrumb mb-3 mt-2">
     <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a></li>
     <li class="breadcrumb-item active"><a asp-area="Admin" asp-controller="Category" asp-action="DeletedCategories">Silinmiş Kategoriler</a></li>
 </ol>
 <div id="modalPlaceHolder" aria-hidden="true"></div>
     <div class="card mb-4 mt-2">
-                            <div class="card-header">
-                                <i class="fas fa-table mr-1"></i>
-                                Silinmiş Kategoriler
+                            <div style="background-color:#182539" class="card-header">
+                                <i style="color:white" class="fas fa-table mr-1"></i>
+        <a style="color:white">Silinmiş Kategoriler </a>
                             </div>
         <div class="card-body">
             <div class="spinner-border" role="status" style="display: none;">
