--- a/BloggerWay.MVC/Areas/Admin/Views/Options/EmailSettings.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Options/EmailSettings.cshtml
@@ -8,8 +8,8 @@
 <div class="row">
     <div class="col-lg-8 offset-lg-2">
         <div class="card mt-1 mb-1">
-            <div class="card-header">
-                <h4 class="text-center"><span class="fas fa-edit"></span> E-Posta Ayarları</h4>
+            <div style="background-color:#182539" class="card-header">
+                <h4 style="color:white" class="text-center"><span class="fas fa-edit"></span> E-Posta Ayarları</h4>
             </div>
             <div class="card-body">
                 <form asp-controller="Options" asp-action="EmailSettings" method="post" id="form-emailsettings-update">
@@ -46,7 +46,7 @@
                             <span class="text-danger" asp-validation-for="Password"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <button type="submit" class="btn btn-primary"><span class="fas fa-save"></span> Kaydet</button>
+                            <button style="background-color:#c47941" type="submit" class="btn btn-primary"><span class="fas fa-save"></span> Kaydet</button>
                             <a class="btn btn-danger" asp-area="Admin" asp-controller="Home" asp-action="Index"><span class="fas fa-times"></span> İptal</a>
                         </div>
                     </div>
