--- a/BloggerWay.MVC/Areas/Admin/Views/User/ChangeDetails.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/ChangeDetails.cshtml
@@ -6,8 +6,8 @@
 <div class="row">
     <div class="col-lg-8 offset-lg-2">
         <div class="card mt-1 mb-1">
-            <div class="card-header">
-                <h4 class="text-center"><span class="fas fa-edit"></span> Profil Düzenle</h4>
+            <div style="background-color:#182539" class="card-header">
+                <h4 style="color:white" class="text-center"><span class="fas fa-edit"></span> Profil Düzenle</h4>
             </div>
             <div class="card-body">
                 <form asp-controller="User" asp-action="ChangeDetails" enctype="multipart/form-data" method="post" id="form-user-update">
@@ -91,7 +91,7 @@
                             <span class="text-danger" asp-validation-for="PictureFile"></span>
                         </div>
                         <div class="form-group col-md-12 text-center">
-                            <button type="submit" class="btn btn-primary btn-lg"><span class="fas fa-save"></span> Kaydet</button>
+                            <button style="background-color:#c47941" type="submit" class="btn btn-primary btn-lg"><span class="fas fa-save"></span> Kaydet</button>
                             <a class="btn btn-danger btn-lg" asp-area="Admin" asp-controller="Home" asp-action="Index"><span class="fas fa-times"></span> İptal</a>
                         </div>
                     </div>
