--- a/BloggerWay.MVC/Areas/Admin/Views/User/PasswordChange.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/PasswordChange.cshtml
@@ -28,7 +28,7 @@
                         <span class="text-danger" asp-validation-for="RepeatPassword"></span>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"><span class="fas fa-save"></span> Kaydet</button>
+                        <button style="background-color:#c47941" type="submit" class="btn btn-primary btn-block"><span class="fas fa-save"></span> Kaydet</button>
                         <a class="btn btn-danger btn-block" asp-area="Admin" asp-controller="Home" asp-action="Index"><span class="fas fa-times"></span> İptal</a>
                     </div>
                 </form>
