--- a/BloggerWay.MVC/Areas/Admin/Views/User/_GetDetailPartial.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/_GetDetailPartial.cshtml
@@ -2,9 +2,9 @@
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"><span class="fas fa-newspaper"></span> @Model.User.Id No'lu Kullanıcı Detayı Görüntüleniyor...</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="İptal">
+            <div style="background-color:#182539" class="modal-header">
+                <h5 style="color:white" class="modal-title"><span class="fas fa-newspaper"></span> @Model.User.Id No'lu Kullanıcı Detayı Görüntüleniyor...</h5>
+                <button style="color:white" type="button" class="close" data-dismiss="modal" aria-label="İptal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
