--- a/BloggerWay.MVC/Areas/Admin/Views/User/_UserAddPartial.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/_UserAddPartial.cshtml
@@ -2,8 +2,8 @@
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"><span class="fas fa-plus"></span> Kullanıcı Ekle</h5>
+            <div style="background-color:#182539" class="modal-header">
+                <h5 style="color:white" class="modal-title"><span class="fas fa-plus"></span> Kullanıcı Ekle</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="İptal">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -92,8 +92,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger btn-block" data-dismiss="modal"><span class="fas fa-times"></span> İptal</button>
-                <button type="button" class="btn btn-primary btn-block" id="btnSave"><span class="fas fa-save"></span> Kaydet</button>
+                <button  type="button" class="btn btn-danger btn-block" data-dismiss="modal"><span class="fas fa-times"></span> İptal</button>
+                <button style="background-color:#c47941" type="button" class="btn btn-primary btn-block" id="btnSave"><span class="fas fa-save"></span> Kaydet</button>
             </div>
         </div>
     </div>
