--- a/BloggerWay.MVC/Views/Comment/_CommentAddPartial.cshtml
+++ b/BloggerWay.MVC/Views/Comment/_CommentAddPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BloggerWay.Entities.Dtos.CommentAddDto
-<div "background-color:#F5F5F5" class="card my-4">
-    <h5  style="color:black" class="card-header">Bir yorum ekle:</h5>
+<div class="card my-4">
+    <h5  style="color:black"  class="card-header">Bir yorum ekle:</h5>
     <div class="card-body form-card">
         <form asp-controller="Comment" asp-action="Add" method="post" id="form-comment-add">
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <textarea class="form-control" rows="3" asp-for="Text"></textarea>
             </div>
-            <button  style="background-color:#c47941" type="button" class="btn btn-primary" id="btnSave"><p style="color:white">Ekle</p></button>
+            <button style="background-color:#c47941" type="button" class="btn btn-primary" id="btnSave">Ekle</button>
         </form>
     </div>
 </div>
